--- a/index.html
+++ b/index.html
@@ -1,39 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Tarefas</title>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Lista de Tarefas</title>
 
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-</head>
-<body>
-    
-    <main>
+        <link rel="stylesheet" href="css/style.css" />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+        />
+    </head>
+    <body>
+        <main>
+            <form>
+                <input
+                    type="text"
+                    placeholder="Adicionar tarefa"
+                    class="add-input"
+                    id="input"
+                />
+                <button class="add-btn" id="addTaskBtn">+</button>
+            </form>
 
-        <form>
-            <input type="text" placeholder="Adicionar tarefa" class="add-input">
-            <button type="button" class="add-btn">+</button>
-        </form>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Tarefa</th>
+                        <th>Criada em</th>
+                        <th>
+                            <span class="material-symbols-outlined"
+                                >delete</span
+                            >
+                        </th>
+                    </tr>
+                </thead>
 
-        <table>
+                <tbody>
 
-            <thead>
-                <tr>
-                    <th>Tarefa</th>
-                    <th>Criada em</th>
-                    <th>Status</th>
-                    <th><span class="material-symbols-outlined">delete</span></th>
-                </tr>
-            </thead>
+                </tbody>
+            </table>
+        </main>
 
-            <tbody>
-            </tbody>
-
-        </table>
-    </main>
-
-    <script src="js/script.js"></script>
-</body>
+        <script src="script/teste.js"></script>
+    </body>
 </html>
