--- a/index.html
+++ b/index.html
@@ -13,21 +13,36 @@
     </head>
     <body>
         <main>
-            <form>
-                <input
-                    type="text"
-                    placeholder="Adicionar tarefa"
-                    class="add-input"
-                    id="input"
-                />
-                <button class="add-btn" id="addTaskBtn">+</button>
-            </form>
+            <button class="create-task-btn" id="openFormBtn">
+                <span class="material-symbols-outlined"> add </span>
+                Criar nova tarefa
+            </button>
 
+            <div class="blur" id="form">
+                <form class="form-task">
+                    <div>
+                        <span class="material-symbols-outlined" id="closeFormBtn">close</span>
+                    </div>
+                    <input
+                        type="text"
+                        placeholder="Título da tarefa"
+                        autocomplete="off"
+                        id="input"
+                    />
+                    <input type="date" id="term" />
+
+                    <hr />
+
+                    <button id="addTaskBtn">Adicionar nova tarefa</button>
+                </form>
+            </div>
+        </main>
+        <main>
             <table>
                 <thead>
                     <tr>
                         <th>Tarefa</th>
-                        <th>Criada em</th>
+                        <th>Prazo</th>
                         <th>
                             <span class="material-symbols-outlined"
                                 >delete</span
@@ -36,12 +51,21 @@
                     </tr>
                 </thead>
 
-                <tbody>
-
-                </tbody>
+                <tbody></tbody>
             </table>
         </main>
 
-        <script src="script/teste.js"></script>
+        <div class="blur" id="confirmDelete">
+            <div class="confirm-delete">
+                <span>APAGAR TAREFA?</span>
+                
+                <div>
+                    <button id="cancelDelete">Cancelar</button>
+                    <button id="deleteTask">Sim, apagar!</button>
+                </div>
+            </div>
+        </div>
+
+        <script src="script/script.js"></script>
     </body>
 </html>
