--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
             <div class="blur" id="form">
                 <form class="form-task">
                     <div>
-                        <span class="material-symbols-outlined" id="closeFormBtn">close</span>
+                        <span
+                            class="material-symbols-outlined"
+                            id="closeFormBtn"
+                            >close</span
+                        >
                     </div>
                     <input
                         type="text"
@@ -55,13 +59,12 @@
             </table>
         </main>
 
-        <div class="blur" id="confirmDelete">
+        <div class="blur" id="modalDeleteTask">
             <div class="confirm-delete">
                 <span>APAGAR TAREFA?</span>
-                
-                <div>
+
+                <div id="deleteConfirmButton">
                     <button id="cancelDelete">Cancelar</button>
-                    <button id="deleteTask">Sim, apagar!</button>
                 </div>
             </div>
         </div>
