Rolagem de dados

--- a/index.html
+++ b/index.html
@@ -13,6 +13,28 @@
     </head>
     <body>
         <main>
+            <div class="container-weekday-button">
+                <button>Seg</button>
+                <button>Ter</button>
+                <button>Qua</button>
+                <button>Qui</button>
+                <button>Sex</button>
+                <button>Sab</button>
+                <button>Dom</button>
+            </div>
+
+            <section class="container-weekday"></section>
+            <section class="container-weekday"></section>
+            <section class="container-weekday"></section>
+            <section class="container-weekday"></section>
+            <section class="container-weekday"></section>
+            <section class="container-weekday"></section>
+            <section class="container-weekday"></section>
+            
+        </main>
+
+
+        <!--<main>
             <button class="create-task-btn" id="openFormBtn">
                 <span class="material-symbols-outlined"> add </span>
                 Criar nova tarefa
@@ -67,7 +89,7 @@
                     <button id="cancelDelete">Cancelar</button>
                 </div>
             </div>
-        </div>
+        </div>-->
 
         <script src="script/script.js"></script>
     </body>
